2008-02-07:
	* README,configure.ac,src/options.c,src/tokens.c,src/afs5log.c,
	src/afs5log.1.in,src/pam_krb5.5.in: add a "token_strategy" option
	to pam_krb5, and a matching "-s" option to afs5log.  That, in
	combination being able to specify the best guess at the principal name
	for a cell, should really let people cut down on what's getting to be
	a large set of round trips to the KDC.

2008-02-07:
	* configure.ac: get the sense of --enable-keyutils right, so that we
	warn when it's not requested, and error when it's requested, instead
	of the other way around.
	* src/afs5log.c: reorder the default list of methods, close the ccache
	properly, and free the temporary homedir string for debugging use.
	* src/minikafs.c(minikafs_5settoken2): add, to set a v5 cred.
	* src/minikafs.c(minikafs_5log,minikafs_5log_with_principal): take a
	flag to signal that we should try rxk5, and use it and the 2b flag to
	designate which method we want to use (no longer trying more than one
	during a single invocation).
	* src/minikafs.c(encode_bytes,encode_ubytes): take const input.
	* src/minikafs.c(encode_string): add.
	* src/tokens.c: add rxk5 to the default method lists.

2008-02-07:
	* src/kuserok.c(_pam_krb5_kuserok): add a function which wraps
	krb5_kuserok() in a subprocess which can create a new PAG, get tokens,
	and drop privileges to the user's account, all so that we can attempt
	to read the user's .k5login if we need to, and without disturbing any
	AFS creds the calling process might have.
	* src/auth.c(pam_sm_authenticate),src/acct.c(pam_sm_acct_mgmt): use
	_pam_krb5_kuserok() instead of trying to get tokens, call
	krb5_kuserok(), and clear tokens

2008-02-07:
	* src/minikafs.c: don't barf on compile if NI_MAXHOST isn't defined.

2008-01-29:
	* src/options.c: log a debug message when we disable prompting
	on behalf of libkrb5

2007-12-11:
	* src/auth.c: don't ask for another password when we've already
	gotten an unknown-user error, since there's no point then (Paul